--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "hookmaterial",
+  "name": "figures",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://greycat20142017.github.io/figures",
   "dependencies": {
     "@material-ui/core": "^4.4.3",
     "@material-ui/lab": "^4.0.0-alpha.27",
+    "chart.js": "^2.9.3",
+    "hookrouter": "^1.2.3",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dnd": "^9.4.0",
