--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "figures",
+  "name": "rtasksmui",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://greycat20142017.github.io/figures",
+  "homepage": "https://greycat20142017.github.io/rtasksmui",
   "dependencies": {
     "@material-ui/core": "^4.4.3",
     "@material-ui/lab": "^4.0.0-alpha.27",
@@ -13,6 +13,7 @@
     "react-dnd": "^9.4.0",
     "react-dnd-html5-backend": "^9.4.0",
     "react-dom": "^16.9.0",
+    "react-hook-form": "^3.28.14",
     "react-scripts": "3.1.2"
   },
   "scripts": {
