--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "homepage": "https://greycat20142017.github.io/rtasksmui",
   "dependencies": {
-    "@material-ui/core": "^4.4.3",
+    "@material-ui/core": "^4.7.2",
     "@material-ui/lab": "^4.0.0-alpha.27",
     "chart.js": "^2.9.3",
     "hookrouter": "^1.2.3",
@@ -14,7 +14,7 @@
     "react-dnd-html5-backend": "^9.4.0",
     "react-dom": "^16.9.0",
     "react-hook-form": "^3.28.14",
-    "react-scripts": "3.1.2"
+    "react-scripts": "^3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
