--- a/package.json
+++ b/package.json
@@ -2,25 +2,30 @@
   "name": "rtasksmui",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://greycat20142017.github.io/rtasksmui",
   "dependencies": {
     "@material-ui/core": "^4.7.2",
     "@material-ui/lab": "^4.0.0-alpha.27",
+    "@material-ui/pickers": "^4.0.0-alpha.3",
+    "axios": "^0.19.2",
     "chart.js": "^2.9.3",
-    "hookrouter": "^1.2.3",
+    "date-fns": "^2.9.0",
+    "is_js": "^0.9.0",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dnd": "^9.4.0",
     "react-dnd-html5-backend": "^9.4.0",
     "react-dom": "^16.9.0",
     "react-hook-form": "^3.28.14",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
